[package]
name = "my_penrose"
version = "0.1.0"
authors = ["niloco"]
edition = "2021"

[[bin]]
name = "wm"
path = "src/main.rs"

[dependencies]
once_cell = "1.9.0"
penrose = { path = "/home/niloco/code/rust/penrose"}
simplelog = "0.8"
tracing-subscriber = { version = "0.3.9", features = ["fmt", "env-filter"] }
tracing = "0.1"
